--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             <li class="col-4-12 ae-4">
               <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Contact Email</h6>
-                <p class="tiny"><a class="opacity-8" href="mailto:#">email not ready</a></p>
+                <p class="tiny"><a class="opacity-8" href="mailto:#">not ready</a></p>
               </div>
               <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Working On...</h6>
@@ -398,7 +398,7 @@
             </li>
             <li class="col-4-12 ae-5">
               <div class="fix-3-12 equalElement">
-                <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Blog</h6>
+                <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Working On...</h6>
                 <p class="tiny"><a class="opacity-8" href="#">Programming...</a></p>
               </div>
               <!-- Comment
@@ -442,10 +442,3 @@
 		
 </body>
 </html>
-
-
-<!--
-<a href="https://www.youtube.com/channel/UCOVoUxvP6oOJqPIfm0_n6Sg">
-  <img src="https://img.shields.io/badge/YouTube-red?style=for-the-badge&logo=youtube&logoColor=white" alt="Youtube Badge"/>
-</a>
- -->
