--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
           <a href="https://twitter.com/SergioGallegosH">
             <img src="https://img.shields.io/badge/Twitter-blue?style=for-the-badge&logo=twitter&logoColor=white" alt="Twitter Badge"/>
           </a>
+          <a href="https://www.threads.net/@sergiogallegosh">
+            <img src="assets/img/threads1.png" width="40" height="30" alt="Threads Badge"/>
+          </a>
         </div>
 
         <!-- Comment
@@ -303,7 +306,7 @@
           <p class="tiny"><span class="opacity-8" id="visit-count"></span></p>
         </div>
 
-        <img style="display: block;margin: auto;background-color: hsl(0, 0%, 90%);" src="assets/img/internetdog.gif" width="634" height="720">
+        <img style="display: block;margin: auto;background-color: hsl(0, 0%, 90%);" src="assets/img/internetdog.gif" width="434" height="520">
 
          <!-- Comment
         <div class="fix-12-12">  
@@ -394,7 +397,7 @@
             <li class="col-4-12 ae-4">
               <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Social Media</h6>
-                <p class="tiny"><a class="opacity-8" href="mailto:#">See my LinkedIn or Twitter.</a></p>
+                <p class="tiny"><a class="opacity-8" href="mailto:#">See my LinkedIn , Twitter or Threads!.</a></p>
               </div>
               <!-- <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Working On...</h6>
@@ -442,6 +445,7 @@
         <li><a href="https://twitter.com/SergioGallegosH" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
         <li><a href="https://www.youtube.com/channel/UCOVoUxvP6oOJqPIfm0_n6Sg" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#youtube"></use></svg></a></li>
         <li><a href="https://github.com/sergiogallegos" target="_blank"> <img src="https://badgen.net/badge/icon/github?icon=github&label"/>  </a> </a></li>
+        <li><a href="https://www.threads.net/@sergiogallegosh" target="_blank"> <img src="assets/img/threads1.png" width="25" height="25"/>  </a> </a></li>
       </ul>
     </div>
   </div>
