--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script src="js/slides.min.js?41331" type="text/javascript"></script>
 
 	<!-- Custom Scripts -->
-	<!-- <script src="js/custom.js" type="text/javascript"></script> -->
+	<!--<script src="js/custom.js" type="text/javascript"></script> -->
 
 	<!-- Fonts and Material Icons -->
 	<link rel="stylesheet" as="font" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700|Material+Icons"/>
@@ -124,8 +124,7 @@
       </div>
     </div>
   </div>
-  <!-- <div class="background" style="background-image:url(assets/img/background/img-11.jpg)"></div>-->
-  <div class="background" style="background-color:rgb(64, 64, 64)"></div>
+  <div class="background" style="background-color:dimgrey"></div>
 </section>
 
 <!-- Slide 2 (#75) -->
@@ -160,39 +159,10 @@
           </a>
         </div>
 
-        <!-- Comment
-        <div class="fix-12-12">
-          <ul class="grid grid-75 masonry fixedSpaces ae-3 controller popupTrigger" data-popup-id="75-1" data-slider-id="75-1">
-            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-6 fadeIn">
-              <img src="assets/img/gallery-75-7.jpg" class="wide rounded margin-bottom-1" alt="Image"/>
-            </li>
-            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-3 fadeIn">
-              <img src="assets/img/gallery-75-6.jpg" class="wide rounded margin-bottom-1" alt="Image"/>
-            </li>
-            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-2 fadeIn">
-              <img src="assets/img/gallery-75-5.jpg" class="wide rounded margin-bottom-1" alt="Image"/>
-            </li>
-            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-7 fadeIn">
-              <img src="assets/img/gallery-75-1.jpg" class="wide rounded margin-bottom-1" alt="Image"/>
-            </li>
-            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-9 fadeIn">
-              <img src="assets/img/gallery-75-3.jpg" class="wide rounded margin-bottom-1" alt="Image"/>
-            </li>
-            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-5 fadeIn">
-              <img src="assets/img/gallery-75-4.jpg" class="wide rounded margin-bottom-1" alt="Image"/>
-            </li>
-            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-4 fadeIn">
-              <img src="assets/img/gallery-75-2.jpg" class="wide rounded margin-bottom-1" alt="Image"/>
-            </li>
-          </ul>
-        </div>
-         -->
-
       </div>
     </div>
   </div>
- <!--  <div class="background" style="background-image:url(assets/img/background/img-75.jpg)"></div>-->
-  <div class="background" style="background-color:rgb(64, 64, 64)"></div>
+  <div class="background" style="background-color:dimgray"></div>
 </section>
 
 <!-- Popup Gallery -->
@@ -272,8 +242,7 @@
       </div>
     </div>
   </div>
-  <!--<div class="background" style="background-image:url(assets/img/background/img-90.jpg)"></div>-->
-  <div class="background" style="background-color:rgb(64, 64, 64)"></div>
+   <div class="background" style="background-color:dimgray"></div>
 </section>
 
 <!-- Popup Video -->
@@ -284,7 +253,6 @@
       <div class="wrap">
         <div class="fix-10-12">
           <div class="embedVideo popupContent">
-           <!-- <iframe src="https://www.youtube.com/embed/g8yBqxTiHSs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
            <iframe width="560" height="315" src="https://www.youtube.com/embed/g6nQehBE0CU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
@@ -305,73 +273,11 @@
           <p class="tiny"><span class="opacity-8">"On the Internet, nobody knows you're a dog."</span></p>
           <p class="tiny"><span class="opacity-8" id="visit-count"></span></p>
         </div>
-
-        <img style="display: block;margin: auto;background-color: hsl(0, 0%, 90%);" src="assets/img/internetdog.gif" width="434" height="520">
-
-         <!-- Comment
-        <div class="fix-12-12">  
-          <ul class="grid grid-74 later equal margin-top-5">
-            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter">
-              <a href="#" class="box-74">
-                <div class="thumbnail-74">
-                  <img src="assets/img/gallery-74-1.jpg" class="wide" alt="Thumbnail"/>
-                </div>
-                <div class="name-74 equalElement table wide">
-                  <div class="cell left top">
-                    <h3 class="">Inspiration</h3>
-                    <p class="tiny opacity-6 cropBottom">Creativity is allowing yourself to make&nbsp;mistakes.</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-4 fromCenter">
-              <a href="#" class="box-74">
-                <div class="thumbnail-74">
-                  <img src="assets/img/gallery-74-2.jpg" class="wide" alt="Thumbnail"/>
-                </div>
-                <div class="name-74 equalElement table wide">
-                  <div class="cell left top">
-                    <h3 class="">The Moment</h3>
-                    <p class="tiny opacity-6 cropBottom">A person tends to critique a design in one of several&nbsp;ways.</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-5 fromCenter">
-              <a href="#" class="box-74">
-                <div class="thumbnail-74">
-                  <img src="assets/img/gallery-74-3.jpg" class="wide" alt="Thumbnail"/>
-                </div>
-                <div class="name-74 equalElement table wide">
-                  <div class="cell left top">
-                    <h3 class="">Journey</h3>
-                    <p class="tiny opacity-6 cropBottom">More designers should share space, share&nbsp;resources.</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-5 fromCenter">
-              <a href="#" class="box-74">
-                <div class="thumbnail-74">
-                  <img src="assets/img/gallery-74-4.jpg" class="wide" alt="Thumbnail"/>
-                </div>
-                <div class="name-74 equalElement table wide">
-                  <div class="cell left top">
-                    <h3 class="">Colorado</h3>
-                    <p class="tiny opacity-6 cropBottom">An essential aspect of creativity is not being afraid to&nbsp;fail.</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-          </ul>
-        </div>
-        --> 
-        
+        <img style="display: block;margin: auto;background-color: hsl(0, 0%, 90%);" src="assets/img/internetdog.gif" width="434" height="520">     
       </div>
     </div>
   </div>
-  <!-- <div class="background" style="background-image:url(assets/img/background/img-74.jpg)"></div>-->
-  <div class="background" style="background-color:rgb(64, 64, 64)"></div>
+  <div class="background" style="background-color:dimgray"></div>
 </section>
 
 <!-- Slide 5 (#57) -->
@@ -389,42 +295,18 @@
                 <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Located</h6>
                 <p class="tiny"><a class="opacity-8" href="#">El Paso, TX. USA</a></p>
               </div>
-             <!--  <div class="fix-3-12 equalElement">
-                <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Working On...</h6>
-                <p class="tiny"><a class="opacity-8" href="#">Programming...</a></p>
-              </div> -->
             </li>
             <li class="col-4-12 ae-4">
               <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Social Media</h6>
                 <p class="tiny"><a class="opacity-8" href="mailto:#">See my LinkedIn , Twitter or Threads!.</a></p>
               </div>
-              <!-- <div class="fix-3-12 equalElement">
-                <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Working On...</h6>
-                <p class="tiny"><a class="opacity-8" href="mailto:#">Programming...</a></p>
-              </div>
-              <div class="fix-3-12 equalElement">
-                <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Working On...</h6>
-                <p class="tiny"><a class="opacity-8" href="mailto:#">Programming...</a></p>
-              </div> -->
             </li>
             <li class="col-4-12 ae-5">
               <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">WebInfo</h6>
                 <p class="tiny"><a class="opacity-8" href="#">SergioGallegos @2023</a></p>
               </div>
-              <!-- Comment
-              <div class="fix-3-12 equalElement">
-                <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Stay in touch</h6>
-                <ul class="social-circles">
-                  <li><a class="social-googlePlus" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#googlePlus"></use></svg></a></li>
-                  <li><a class="social-behance" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#behance"></use></svg></a></li>
-                  <li><a class="social-dribbble" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dribbble"></use></svg></a></li>
-                  <li><a class="social-instagram" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
-                  <li><a class="social-medium" href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#medium"></use></svg></a></li>
-                </ul>
-              </div>
-              -->
             </li>
           </ul>
         </div>
@@ -432,8 +314,7 @@
       </div>
     </div>
   </div>
- <!--  <div class="background" style="background-image:url(assets/img/background/back3.jpg)"></div> -->
-  <div class="background" style="background-color:rgb(64, 64, 64)"></div>
+  <div class="background" style="background-color:dimgray"></div>
 </section>
 
 <!-- Panel Bottom #13 -->
@@ -453,6 +334,6 @@
 
 <!-- Loading Progress Bar -->
 <div class="progress-bar blue"></div>
-		
+
 </body>
 </html>
