--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <li class="col-4-12 ae-3">
               <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">Located</h6>
-                <p class="tiny"><a class="opacity-8" href="#">El Paso, TX. USA</a></p>
+                <p class="tiny"><a class="opacity-8" href="#">El Paso, TX. USA.</a></p>
               </div>
             </li>
             <li class="col-4-12 ae-4">
@@ -305,7 +305,7 @@
             <li class="col-4-12 ae-5">
               <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-4 margin-top-3 margin-bottom-2">WebInfo</h6>
-                <p class="tiny"><a class="opacity-8" href="#">SergioGallegos @2023</a></p>
+                <p class="tiny"><a class="opacity-8" href="#">SergioGallegos @2023.</a></p>
               </div>
             </li>
           </ul>
