--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <div class="fix-10-12 toCenter">
           <h1 class="ae-1">About</h1>
-          <p class="ae-2"><span class="opacity-8">I'm Sergio Gallegos, Automation Controls Engineer and Software Developer</span></p>
+          <p class="ae-2"><span class="opacity-8">I'm Sergio Gallegos, Automation Controls Professional & Software Developer</span></p>
         </div>
 
         <!-- GifIconProgrammer -->
