Add AI from Zero course to Projects section

--- a/index.html
+++ b/index.html
@@ -672,6 +672,30 @@
                                         </a>
                                     </div>
                                 </div>
+                                
+                                <div className="project-card">
+                                    <div className="project-icon">
+                                        <i className="fab fa-youtube"></i>
+                                    </div>
+                                    <h3>Inteligencia Artificial Desde Cero</h3>
+                                    <p>
+                                        A comprehensive video course series in Spanish teaching Artificial Intelligence from the ground up. 
+                                        Covers essential topics including Python programming, mathematics for machine learning, 
+                                        machine learning fundamentals, and deep learning concepts. Perfect for Spanish-speaking beginners.
+                                    </p>
+                                    <div className="tech-stack">
+                                        <span className="tech-tag">Python</span>
+                                        <span className="tech-tag">Machine Learning</span>
+                                        <span className="tech-tag">Deep Learning</span>
+                                        <span className="tech-tag">Mathematics</span>
+                                        <span className="tech-tag">Spanish</span>
+                                    </div>
+                                    <div className="project-links">
+                                        <a href="https://www.youtube.com/playlist?list=PLswZ-W5MlspXhrMDtrAJ6IA5MpR0Uu82K" target="_blank" className="project-link">
+                                            <i className="fab fa-youtube"></i> Watch Course
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </section>
