Update portfolio: refresh skills, experience, and hero section

--- a/index.html
+++ b/index.html
@@ -494,15 +494,16 @@
                         <div className="container">
                             <div className="hero-content">
                                 <h1>Sergio Gallegos</h1>
-                                <p className="subtitle">Electromechanical Engineer | Automation Controls Specialist | Software Engineering Graduate Student</p>
+                                <p className="subtitle">Senior Automation Engineer | MSSwE Student</p>
                                 <p className="description">
-                                    Bridging traditional industrial automation with cutting-edge AI and machine learning. 
-                                    From Mexico to the USA, combining mechanical, electrical, and software engineering 
-                                    to create intelligent automation solutions for the future.
+                                    I design industrial automation systems and build intelligent software. 14+ years integrating PLCs, robots, and vision systems, now applying machine learning and software solutions to make them smarter.
                                 </p>
                                 <p className="description" style={{fontSize: '1rem', marginBottom: '2rem', opacity: '0.9'}}>
-                                    Want to know more about my profile? Check out my <a href="https://www.linkedin.com/in/sergio-gallegos-24271a66/" target="_blank" style={{color: 'white', textDecoration: 'underline'}}>LinkedIn</a> for work-related experience, 
-                                    <a href="https://github.com/sergiogallegos" target="_blank" style={{color: 'white', textDecoration: 'underline'}}> GitHub</a> for code-related skills, and other social networks below.
+                                    <a href="https://www.linkedin.com/in/sergio-gallegos-24271a66/" target="_blank" style={{color: 'white', textDecoration: 'underline', marginRight: '1rem'}}>LinkedIn</a>
+                                    <span style={{marginRight: '1rem'}}>·</span>
+                                    <a href="https://github.com/sergiogallegos" target="_blank" style={{color: 'white', textDecoration: 'underline', marginRight: '1rem'}}>GitHub</a>
+                                    <span style={{marginRight: '1rem'}}>·</span>
+                                    <a href="https://www.youtube.com/@imsergiog" target="_blank" style={{color: 'white', textDecoration: 'underline'}}>YouTube</a>
                                 </p>
                                 <a href="#projects" className="cta-button" onClick={() => scrollToSection('projects')}>
                                     View My Work
@@ -523,22 +524,16 @@
                                 </div>
                                 <div className="about-text">
                                     <p>
-                                        I am an Electromechanical Engineer with extensive experience as an Automation Controls Engineer, 
-                                        working with automation companies and machine builders who design fully automated assembly machines. 
-                                        Currently pursuing a Master of Science in Software Engineering, I'm expanding my expertise into 
-                                        machine learning and deep learning to explore robotics and vision applications in industrial settings.
+                                        I'm a Senior Automation & Controls Engineer with 14+ years of experience integrating PLCs, HMIs, robotics, and vision systems for industrial assembly machines. Currently pursuing a Master of Science in Software Engineering, I'm expanding into machine learning and AI with a focus on robotics and vision applications in manufacturing.
                                     </p>
                                     <p>
-                                        My journey spans from Mexico, where I completed my undergraduate studies, to the United States, 
-                                        where I've been working and continuing my education. With a strong foundation in mechanical and 
-                                        electrical engineering, I'm now integrating software engineering to create innovative solutions 
-                                        that bridge traditional industrial automation with modern AI and machine learning technologies.
+                                        My career began in Mexico, where I earned my degree in Electromechanical Engineering, and has continued in the United States, where I work with automation companies building fully automated production systems. I'm passionate about connecting traditional industrial controls with modern AI to create smarter, more adaptive machines.
                                     </p>
                                     <p>
-                                        <strong>Background:</strong> Electromechanical Engineering, Automation Controls, Software Engineering (MSSwE), 
-                                        Machine Learning & Deep Learning, Web Development, and Industrial Robotics. Father of two toddlers, 
-                                        passionate about technology, sports, and continuous learning. Always been top of my class with 
-                                        strong foundations in mathematics and physics.
+                                        I also teach. My YouTube series, Inteligencia Artificial Desde Cero, is a comprehensive Spanish-language course covering Python, mathematics for machine learning, and deep learning fundamentals.
+                                    </p>
+                                    <p>
+                                        Outside of work: father of two, soccer fan, gym regular.
                                     </p>
                                 </div>
                             </div>
@@ -557,13 +552,15 @@
                                     </div>
                                     <div className="skill-tags">
                                         <span className="skill-tag">PLC Programming</span>
+                                        <span className="skill-tag">HMI Development</span>
+                                        <span className="skill-tag">Robot Integration</span>
+                                        <span className="skill-tag">Computer Vision Systems</span>
+                                        <span className="skill-tag">Software Solutions</span>
+                                        <span className="skill-tag">MES/ERP</span>
+                                        <span className="skill-tag">SCADA</span>
                                         <span className="skill-tag">Motion Control</span>
-                                        <span className="skill-tag">Vision Systems</span>
-                                        <span className="skill-tag">HMI/SCADA</span>
-                                        <span className="skill-tag">Robotics Integration</span>
-                                        <span className="skill-tag">Industrial Networking</span>
-                                        <span className="skill-tag">Ethernet/IP</span>
-                                        <span className="skill-tag">Assembly Machines</span>
+                                        <span className="skill-tag">Web Solutions</span>
+                                        <span className="skill-tag">Traceability Systems</span>
                                     </div>
                                 </div>
                                 
@@ -575,12 +572,14 @@
                                     <div className="skill-tags">
                                         <span className="skill-tag">C++</span>
                                         <span className="skill-tag">Python</span>
-                                        <span className="skill-tag">Rust</span>
+                                        <span className="skill-tag">Java</span>
+                                        <span className="skill-tag">C#</span>
                                         <span className="skill-tag">JavaScript</span>
-                                        <span className="skill-tag">React</span>
-                                        <span className="skill-tag">Web Development</span>
-                                        <span className="skill-tag">Systems Programming</span>
-                                        <span className="skill-tag">API Development</span>
+                                        <span className="skill-tag">Software Architecture and Design</span>
+                                        <span className="skill-tag">Software Project Management</span>
+                                        <span className="skill-tag">System Design</span>
+                                        <span className="skill-tag">OOP</span>
+                                        <span className="skill-tag">Data Structures and Algorithms</span>
                                     </div>
                                 </div>
                                 
@@ -615,6 +614,10 @@
                                         <span className="skill-tag">Linear Algebra</span>
                                         <span className="skill-tag">Calculus</span>
                                         <span className="skill-tag">Statistics</span>
+                                        <span className="skill-tag">Thermodynamics</span>
+                                        <span className="skill-tag">Heat Transfer</span>
+                                        <span className="skill-tag">Mechanical Design</span>
+                                        <span className="skill-tag">Manufacturing Process</span>
                                     </div>
                                 </div>
                             </div>
@@ -747,7 +750,7 @@
                     {/* Footer */}
                     <footer className="footer">
                         <div className="container">
-                            <p>&copy; 2025 Sergio Gallegos. All rights reserved.</p>
+                            <p>&copy; 2026 Sergio Gallegos. All rights reserved.</p>
                         </div>
                     </footer>
                 </div>
