add new project

--- a/index.html
+++ b/index.html
@@ -684,6 +684,37 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-icon">
+                        <i class="fas fa-music"></i>
+                    </div>
+                    <h3>DJ Vibe Bar</h3>
+                    <p>
+                        A multi-provider cloud-based jukebox platform that lets users create and share
+                        music queues for personal parties using their existing streaming accounts.
+                        Integrates multiple music providers with OAuth authentication, real-time queue
+                        synchronization, and playback orchestration. Built as a side project during
+                        my master's degree and launched as a free public product.
+                    </p>
+                    <div class="tech-stack">
+                        <span class="tech-tag">Rust</span>
+                        <span class="tech-tag">Axum</span>
+                        <span class="tech-tag">React</span>
+                        <span class="tech-tag">TypeScript</span>
+                        <span class="tech-tag">PostgreSQL</span>
+                        <span class="tech-tag">AWS</span>
+                        <span class="tech-tag">Docker</span>
+                        <span class="tech-tag">Tailwind CSS</span>
+                        <span class="tech-tag">Spotify API</span>
+                        <span class="tech-tag">Apple Music API</span>
+                        <span class="tech-tag">SoundCloud API</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://djvibebar.com" target="_blank" rel="noopener noreferrer" class="project-link">
+                            <i class="fas fa-globe"></i> Visit Site
+                        </a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-icon">
                         <i class="fab fa-rust"></i>
                     </div>
                     <h3>Rust Ethernet/IP</h3>
